fix: add overflow hidden for document

--- a/src/application/global.css
+++ b/src/application/global.css
@@ -6,4 +6,5 @@ body {
   background-color: var(--color-surface-elevated-0);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 }
